Changed up the handling of fuses.  Lots of minor bug fixes

--- a/oprot.plot.wpf/MainWindow.xaml
+++ b/oprot.plot.wpf/MainWindow.xaml
@@ -10,7 +10,7 @@
         xmlns:properties="clr-namespace:oprot.plot.wpf.Properties"
         mc:Ignorable="d"
         Icon="/Resources/icon.png"
-        Title="oprot.plot.wpf" Height="494" Width="801" WindowState="Maximized">
+        Title="oprot.plot.wpf" Height="494" Width="801" WindowState="Maximized" Loaded="Window_Loaded">
     <Window.DataContext >
         <local:MainViewModel x:Name="_model"/>
     </Window.DataContext>
@@ -95,13 +95,22 @@
                 </Grid>
             </StackPanel>
         </DataTemplate>
-        <DataTemplate DataType="{x:Type ppcore:Fuse}">
+        <DataTemplate DataType="{x:Type ppcore:FuseDualCharacteristic}">
             <StackPanel>
                 <Grid>
-                    <Label Content="Fuse Rating:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
-                    <ComboBox  HorizontalAlignment="Left" Margin="76,3,0,0" VerticalAlignment="Top" Width="164" ItemsSource="{Binding FuseRatings}" SelectedItem="{Binding Path=Rating}" />
+                    <Label Content="Fuse Size:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                    <ComboBox  HorizontalAlignment="Left" Margin="76,3,0,0" VerticalAlignment="Top" Width="164" ItemsSource="{Binding FuseSizes}" SelectedItem="{Binding Path=FuseSize}" />
                 </Grid>
                 
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type ppcore:NHFuse}">
+            <StackPanel>
+                <Grid>
+                    <Label Content="Fuse Size:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
+                    <ComboBox  HorizontalAlignment="Left" Margin="76,3,0,0" VerticalAlignment="Top" Width="164" ItemsSource="{Binding FuseSizes}" SelectedItem="{Binding Path=FuseSize}" />
+                </Grid>
+
             </StackPanel>
         </DataTemplate>
         <DataTemplate DataType="{x:Type ppcore:FuseSaver}">
@@ -112,7 +121,7 @@
                 </Grid>
                 <Grid>
                     <Label Content="Fuse Rating:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
-                    <ComboBox  HorizontalAlignment="Left" Margin="76,3,0,0" VerticalAlignment="Top" Width="164" ItemsSource="{Binding Fuse.FuseRatings}" SelectedItem="{Binding Path=Fuse.Rating}" />
+                    <ComboBox  HorizontalAlignment="Left" Margin="76,3,0,0" VerticalAlignment="Top" Width="164" ItemsSource="{Binding Fuse.FuseSizes}" SelectedItem="{Binding Path=Fuse.FuseSize}" />
                 </Grid>
                 <Grid>
                     <Label Content="Max Trip (s):" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
@@ -189,7 +198,7 @@
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
-    <Grid>
+    <Grid x:Name="mainGrid">
         <DockPanel Margin="0,0,0,0">
             <ToolBarTray Height="50" VerticalAlignment="Top" DockPanel.Dock="Top">
                 <ToolBar Height="50">
@@ -237,15 +246,15 @@
                 </Expander.Header>
                 <Grid Background="#FFE5E5E5" Width="300">
                     <Label Content="Minimum Amps" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <TextBox HorizontalAlignment="Left" Margin="126,4,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding MinimumCurrent, Source={x:Static properties:Settings.Default}}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
+                    <TextBox HorizontalAlignment="Left" Margin="126,4,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding Path=(ppcore:GraphFeature.MinimumCurrent)}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
                     <Label Content="Number of Samples" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,50,0,0"/>
-                    <TextBox HorizontalAlignment="Left" Margin="126,54,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding NumberOfSamples, Source={x:Static properties:Settings.Default}}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
+                    <TextBox HorizontalAlignment="Left" Margin="126,54,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding Path=(ppcore:GraphFeature.NumberOfSamples)}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
                     <Label Content="Plot Title" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,75,0,0"/>
                     <TextBox HorizontalAlignment="Left" Margin="126,79,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding PlotTitle}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
                     <Label Content="Base Voltage (v)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,100,0,0"/>
-                    <TextBox HorizontalAlignment="Left" Margin="126,104,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding BaseVoltage}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
+                    <TextBox HorizontalAlignment="Left" Margin="126,104,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding Path=(ppcore:GraphFeature.BaseVoltage)}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
                     <Label Content="Maximum Amps" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,25,0,0"/>
-                    <TextBox HorizontalAlignment="Left" Margin="126,29,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding MaximumCurrent, Source={x:Static properties:Settings.Default}}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
+                    <TextBox HorizontalAlignment="Left" Margin="126,29,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding Path=(ppcore:GraphFeature.MaximumCurrent)}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
                     <Label Content="Absolute Max (A)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,125,0,0"/>
                     <TextBox HorizontalAlignment="Left" Margin="126,129,0,0" VerticalAlignment="Top" Width="164" Height="20" Text="{Binding ProtectionPlot.Axes[0].AbsoluteMaximum}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
                     <Label Content="Absolute Min (A)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,150,0,0"/>
@@ -266,7 +275,7 @@
                 </Expander.Header>
                 <Grid Background="#FFE5E5E5" Width="260">
                     <DockPanel LastChildFill="True">
-                        <StackPanel DockPanel.Dock="Top" DataContext="{Binding SelectedItem, ElementName=listBox}" Height="350">
+                        <StackPanel DockPanel.Dock="Top" DataContext="{Binding SelectedItem, ElementName=listBox}" Height="350" IsEnabled="{Binding SelectedItems.Count, ElementName=listBox}">
                             <Grid>
                                 <Label Content="Name" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
                                 <TextBox HorizontalAlignment="Left" Margin="76,4,0,0" VerticalAlignment="Top" Width="139" Height="20" Text="{Binding CurveObject.Name}" local:InputBindingsManager.UpdateOnEnter="TextBox.Text"/>
@@ -293,12 +302,13 @@
                             <Grid>
                                 <CheckBox Content="Hidden" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="89" Height="20" IsChecked="{Binding CurveObject.Hidden}"  />
                             </Grid>
-
+                            <!--
                             <Grid>
                                 <CheckBox Content="Show curve type after name" HorizontalAlignment="Left" Margin="10,3,0,0" VerticalAlignment="Top" Width="180" Height="20" IsChecked="{Binding CurveObject.AppendCurveTypeToDisplayName}" />
                             </Grid>
+                            -->
                         </StackPanel>
-                        <ListBox x:Name="listBox" Margin="0,4,0,0" ItemsSource="{Binding Curves}" HorizontalContentAlignment="Stretch">
+                        <ListBox x:Name="listBox" Margin="0,4,0,0" ItemsSource="{Binding Curves}" HorizontalContentAlignment="Stretch" >
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <Border BorderThickness="2" BorderBrush="{Binding CurveObject.DisplayColor, Converter={StaticResource OxyToBrushConverter}}">
